<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="20dp"
	android:background="?attr/colorSurface">
	<TextView
		android:id="@+id/title"
		android:focusable="false"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:text="@string/app_create_new_project_title"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="@color/md_theme_light_tertiary" />
	<LinearLayout
		android:id="@+id/linear12"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="12dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<LinearLayout
			android:id="@+id/linear36"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<de.hdodenhof.circleimageview.CircleImageView
				android:id="@+id/app_icon"
				android:layout_width="44dp"
				android:layout_height="44dp"
				android:src="@drawable/android_robot"
				app:civ_border_width="0dp"
				app:civ_border_color="#008DCD"
				app:civ_circle_background_color="#E0E0E0"
				app:civ_border_overlay="true" />
			<TextView
				android:id="@+id/textview12"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/word_type_to_change_icon"
				android:textSize="12sp"
				android:textColor="#9E9E9E" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear37"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
				<EditText
					android:id="@+id/app_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingBottom="8dp"
					android:textSize="16sp"
					android:textColor="@color/textColor"
					android:hint="@string/project_default_name_hint_text"
					android:textColorHint="@color/hint_color"
					android:background="@null"
					android:inputType="textCapWords"
					android:focusable="true"
					android:focusableInTouchMode="true" />
			</com.google.android.material.textfield.TextInputLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear13"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="12dp"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:onClick="toggleAdvancedSettings">
		<TextView
			android:id="@+id/advanced_settings"
			android:focusable="false"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/app_advance_settings_word"
			android:textSize="15sp"
			android:textColor="@color/textColor"
			android:layout_weight="1" />
		<ImageView
			android:id="@+id/advanced_icon"
			android:focusable="false"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:src="@drawable/icon_settings_round_blue"
			android:scaleType="fitCenter" />
	</LinearLayout>
	<HorizontalScrollView
		android:id="@+id/hscroll1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:id="@+id/linear14"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:visibility="gone">
			<LinearLayout
				android:id="@+id/linear15"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_weight="1">
				<View
					android:id="@+id/view16"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_marginBottom="4dp"
					android:background="@color/colorAccent" />
				<TextView
					android:id="@+id/textview6"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/word_color_accent"
					android:textSize="13sp"
					android:textColor="#424242" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear17"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_weight="1">
				<View
					android:id="@+id/view18"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_marginBottom="4dp"
					android:background="@color/colorPrimary" />
				<TextView
					android:id="@+id/textview7"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/word_color_primary"
					android:textSize="13sp"
					android:textColor="#424242" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear19"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<View
					android:id="@+id/view20"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_marginBottom="4dp"
					android:background="@color/colorPrimaryDark" />
				<TextView
					android:id="@+id/textview8"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:text="@string/word_color_primary_dark"
					android:textSize="13sp"
					android:textColor="#424242"
					android:layout_gravity="center_horizontal|center_vertical" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear23"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_weight="1">
				<View
					android:id="@+id/view24"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_marginBottom="4dp"
					android:background="@color/colorControlHighlight" />
				<TextView
					android:id="@+id/textview10"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/word_color_primary_highlight"
					android:textSize="13sp"
					android:textColor="#424242" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear25"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:layout_weight="1">
				<View
					android:id="@+id/view26"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_marginBottom="4dp"
					android:background="@color/colorControlNormal" />
				<TextView
					android:id="@+id/textview11"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/word_color_primary_normal"
					android:textSize="13sp"
					android:textColor="#424242" />
			</LinearLayout>
		</LinearLayout>
	</HorizontalScrollView>
	<LinearLayout
		android:id="@+id/linear26"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="gone">
		<LinearLayout
			android:id="@+id/linear27"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="4dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<LinearLayout
				android:id="@+id/linear30"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/imageview1"
					android:focusable="false"
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:src="@drawable/default_image"
					android:scaleType="fitCenter" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear29"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/textview9"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/project_template_package_name_title"
					android:textSize="14sp"
					android:textColor="@color/hint_color" />
				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textinputlayout2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
					<EditText
						android:id="@+id/package_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingBottom="8dp"
						android:text="@string/project_template_package_name_hint"
						android:textSize="15sp"
						android:textColor="@color/textColor"
						android:textColorHint="@color/hint_color"
						android:background="@null"
						android:focusable="true"
						android:focusableInTouchMode="true" />
				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear31"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="4dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<LinearLayout
				android:id="@+id/linear32"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/imageview2"
					android:focusable="false"
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:src="@drawable/abc_96"
					android:scaleType="fitCenter" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear33"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/textview2"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Project name"
					android:textSize="14sp"
					android:textColor="@color/hint_color" />
				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textinputlayout3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
					<EditText
						android:id="@+id/project_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingBottom="8dp"
						android:text="@string/project_name_title"
						android:textSize="15sp"
						android:textColor="@color/textColor"
						android:textColorHint="@color/hint_color"
						android:background="@null"
						android:focusable="true"
						android:focusableInTouchMode="true" />
				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear21"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:padding="4dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<LinearLayout
				android:id="@+id/linear35"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/imageview3"
					android:focusable="false"
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:src="@drawable/code_96"
					android:scaleType="fitCenter" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear34"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:orientation="horizontal"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/linear38"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:orientation="horizontal">
					<LinearLayout
						android:id="@+id/linear40"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal"
						android:layout_weight="1">
						<TextView
							android:id="@+id/version_code"
							android:focusable="false"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="1"
							android:textSize="12sp"
							android:textColor="@color/textColor" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/linear39"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal"
						android:layout_weight="1">
						<TextView
							android:id="@+id/version_name"
							android:focusable="false"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="1.0"
							android:textSize="12sp"
							android:textColor="@color/textColor" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear22"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="end">
		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/cancel"
			android:textSize="12sp"
			android:background="@null"
			android:textAllCaps="true" />
		<Button
			android:id="@+id/btn_create"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:text="@string/create_app_word"
			android:textSize="12sp"
			android:background="@null"
			android:textAllCaps="true"
			android:minHeight="0dp"
			android:paddingHorizontal="16dp"
			android:paddingVertical="10dp"
			android:layout_marginStart="8dp" />
	</LinearLayout>
</LinearLayout>
