<androidx.drawerlayout.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/_drawer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:openDrawer="start">
	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:id="@+id/_coordinator"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/_app_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.AppBarOverlay"
			android:visibility="gone">
			<androidx.appcompat.widget.Toolbar
				android:id="@+id/_toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/AppTheme.PopupOverlay"
				android:visibility="gone" />
		</com.google.android.material.appbar.AppBarLayout>
		<RelativeLayout
			android:id="@+id/main_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="?attr/colorSurface"
			tools:context=".DesignActivity"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/designToolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:background="?attr/colorPrimary"
				android:layout_alignTop="@id/anchor">
				<ImageView
					android:id="@+id/img_icon"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_margin="8dp"
					android:src="@drawable/arrow_back_white_48dp"
					android:scaleType="fitCenter"
					android:background="?attr/colorPrimary"
					android:contentDescription="@string/back_button_description" />
				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/linear9"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<androidx.appcompat.widget.LinearLayoutCompat
						android:id="@+id/linear10"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_vertical"
						android:orientation="horizontal"
						android:background="?attr/colorPrimary">
						<androidx.appcompat.widget.LinearLayoutCompat
							android:id="@+id/linear11"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:orientation="vertical"
							android:layout_weight="1"
							android:background="?attr/colorPrimary">
							<com.google.android.material.textview.MaterialTextView
								android:id="@+id/tv_root_title"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/app_name"
								android:textSize="14sp"
								android:singleLine="true"
								android:background="?attr/colorPrimary"
								android:textColor="?attr/colorOnPrimary"
								android:ellipsize="end" />
							<com.google.android.material.textview.MaterialTextView
								android:id="@+id/tv_sub_title"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="601"
								android:textSize="12sp"
								android:textColor="@color/textColor"
								android:singleLine="true"
								android:background="?attr/colorPrimary"
								android:ellipsize="end" />
						</androidx.appcompat.widget.LinearLayoutCompat>
						<Space
							android:id="@+id/linear16"
							android:layout_width="15dp"
							android:layout_height="wrap_content"
							android:background="?attr/colorPrimary" />
						<ImageView
							android:id="@+id/undoIcon"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:src="@drawable/ic_undo_white_48dp"
							android:scaleType="fitCenter"
							android:background="?attr/colorPrimary"
							android:contentDescription="@string/undo_button_description" />
						<Space
							android:id="@+id/linear14"
							android:layout_width="15dp"
							android:layout_height="wrap_content"
							android:background="?attr/colorPrimary" />
						<ImageView
							android:id="@+id/redoIcon"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:src="@drawable/ic_redo_white_48dp"
							android:scaleType="fitCenter"
							android:background="?attr/colorPrimary"
							android:contentDescription="@string/redo_button_description" />
						<Space
							android:id="@+id/linear17"
							android:layout_width="15dp"
							android:layout_height="wrap_content"
							android:background="?attr/colorPrimary" />
						<ImageView
							android:id="@+id/save_logic_button"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:src="@drawable/icon_save_baseline"
							android:scaleType="fitCenter"
							android:background="?attr/colorPrimary"
							android:contentDescription="@string/save_button_description" />
						<Space
							android:id="@+id/linear12"
							android:layout_width="15dp"
							android:layout_height="wrap_content"
							android:background="?attr/colorPrimary" />
						<ImageView
							android:id="@+id/img_more"
							android:layout_width="24dp"
							android:layout_height="24dp"
							android:src="@drawable/icon_more_vert_twotone"
							android:scaleType="fitCenter"
							android:background="?attr/colorPrimary"
							android:contentDescription="@string/more_options_description" />
					</androidx.appcompat.widget.LinearLayoutCompat>
				</androidx.appcompat.widget.LinearLayoutCompat>
			</androidx.appcompat.widget.LinearLayoutCompat>
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/toolbar_improved"
				android:layout_width="0dp"
				android:layout_height="0dp" />
			<com.google.android.material.tabs.TabLayout
				android:id="@+id/tab_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?attr/colorPrimary"
				app:tabGravity="fill"
				app:tabMode="fixed"
				app:tabIndicatorHeight="3dp"
				app:tabIndicator="@drawable/tab_indicator"
				app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
				android:layout_below="@id/designToolbar" />
			<androidx.viewpager.widget.ViewPager
				android:id="@+id/customViewPager"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_above="@id/control_panel"
				android:layout_below="@id/tab_layout" />
			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/ah"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:padding="8dp"
				android:visibility="gone"
				android:layout_alignBottom="@id/ll_properties" />
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/anchor"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="horizontal"
				android:layout_toEndOf="@id/customViewPager" />
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/control_panel"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:padding="@dimen/control_panel_padding"
				android:background="?attr/colorSurface"
				android:layout_alignParentBottom="true"
				android:layout_alignBottom="@id/ll_properties">
				<androidx.appcompat.widget.AppCompatSpinner
					android:id="@+id/file_spinner"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1" />
				<ImageView
					android:id="@+id/project_detail"
					android:layout_width="29dp"
					android:layout_height="38dp"
					android:src="@drawable/ic_detail_setting_48dp"
					android:scaleType="fitCenter"
					android:contentDescription="@string/project_detail_description" />
				<Space
					android:id="@+id/linear15"
					android:layout_width="17dp"
					android:layout_height="match_parent" />
				<com.google.android.material.button.MaterialButton
					android:id="@+id/execute_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/run_button_text"
					android:textStyle="bold"
					android:textSize="@dimen/button_text_size"
					android:textColor="?attr/colorOnPrimary"
					android:layout_marginEnd="@dimen/button_margin_end"
					style="@style/Widget.MaterialComponents.Button"
					app:backgroundTint="?attr/colorPrimary" />
			</androidx.appcompat.widget.LinearLayoutCompat>
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/ll_properties"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone"
				android:layout_alignParentBottom="true">
				<include layout="@layout/widget_property" />
			</androidx.appcompat.widget.LinearLayoutCompat>
			<de.hdodenhof.circleimageview.CircleImageView
				android:id="@+id/circleimageview1"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:src="@drawable/default_image"
				app:civ_border_color="?attr/colorPrimary"
				app:civ_border_overlay="true"
				app:civ_border_width="3dp"
				app:civ_circle_background_color="?attr/colorSurface" />
			<LinearLayout
				android:id="@+id/linear18"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:padding="8dp"
				android:orientation="horizontal" />
		</RelativeLayout>
	</androidx.coordinatorlayout.widget.CoordinatorLayout>
	<LinearLayout
		android:id="@+id/_nav_view"
		android:layout_width="320dp"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="#EEEEEE">
		<include layout="@layout/_drawer_design" android:id="@+id/drawer" />
	</LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
